:art: corrigir listar pacientes

--- a/alimento/templates/alimento/alimentos.html
+++ b/alimento/templates/alimento/alimentos.html
@@ -88,9 +88,9 @@
         <hr />
       </div>
 
-      {% block collapse_alimentos %}
+      {% comment %} {% block collapse_alimentos %}
         {{ block.super }}
-      {% endblock %}
+      {% endblock %} {% endcomment %}
 
       <dialog class="cadastro-alimento" id="myModal">
         <button id="fecharModal"><i class="ph ph-x"></i></button>
