--- a/paciente/templates/paciente/collapse.html
+++ b/paciente/templates/paciente/collapse.html
@@ -1,22 +1,18 @@
-{% extends 'core/base.html' %}
 {% load static %}
-{% block collapse %}
-<body>
-  <main>
   <ul id="collapse">
     <li>
-      <label for="first">
+      <label for={{paciente.id}}>
         <div class="informacoes-do-paciente">
-          <img src="{% static 'imagens/usuario.svg' %}" alt="Logo DietHub" /> Paciente 1
+          <img src="{% static 'imagens/usuario.svg' %}" alt="Logo DietHub" /> {{ paciente.nome }}
         </div>
         <i class="ph ph-caret-down"></i>
       </label>
-      <input type="radio" name="collapse" id="first" checked />
+      <input type="radio" name="collapse" id="{{paciente.id}}" {% if forloop.first %}checked{% endif %} />
       <div class="content">
         <div class="informacoes-gerais-do-paciente">
           <div class="detalhes-collapse">
             <span class="titulo-collapse">Nome</span>
-            <span class="dados-do-cliente">{{paciente.nome}}</span>
+            <span class="dados-do-cliente"> {{paciente.nome}} </span>
           </div>
 
           <div class="detalhes-collapse">
@@ -70,7 +66,7 @@
         </div>
       </div>
     </li>
-    <li>
+    {% comment %} <li>
       <label for="second">
         <div class="informacoes-do-paciente">
           <img src="{% static 'imagens/usuario.svg' %}" alt="Logo DietHub" /> Paciente 2
@@ -129,12 +125,10 @@
         <div class="footer-collapse-pacientes">
           <button id="botao-editar">
             <i class="ph ph-pencil-simple-line"></i>
-            {% comment %} <a href="{% url 'editar-paciente' id=paciente.id %}">Editar</a> {% endcomment %}
             Editar
           </button>
           <button id="botao-excluir">
             <i class="ph ph-trash"></i>
-            {% comment %} <a href="{% url 'deletar-paciente' id=paciente.id %}">Excluir</a> {% endcomment %}
             Excluir
           </button>
         </div>
@@ -199,19 +193,14 @@
         <div class="footer-collapse-pacientes">
           <button id="botao-editar">
             <i class="ph ph-pencil-simple-line"></i>
-            {% comment %} <a href="{% url 'editar-paciente'%}">Editar</a> {% endcomment %}
             Editar
           </button>
           <button id="botao-excluir">
             <i class="ph ph-trash"></i>
-            {% comment %} <a href="{% url 'deletar-paciente' %}">Excluir</a> {% endcomment %}
             Excluir
           </button>
         </div>
       </div>
-    </li>
+    </li> {% endcomment %}
   </ul>
-  </main>
-  {% include 'dieta/cadastrar-dieta.html' %} 
-</body>
-{% endblock %}
+{% include 'dieta/cadastrar-dieta.html' %} 
