--- a/paciente/templates/paciente/collapse.html
+++ b/paciente/templates/paciente/collapse.html
@@ -57,150 +57,19 @@
         <div class="footer-collapse-pacientes">
           <button id="botao-editar">
             <i class="ph ph-pencil-simple-line"></i>
-            Editar
+            <a id="abrirModal3" hx-get={% url 'editar-paciente' id=paciente.id %} hx-trigger='click' hx-target='#modal3' hx-swap="innerHTML"id="abrirModal3" hx-get={% url 'editar-paciente' id=paciente.id %} hx-trigger='click' hx-target='#modal3' hx-swap="innerHTML">Editar</a>
           </button>
           <button id="botao-excluir">
             <i class="ph ph-trash"></i>
-            Excluir
+            <a href="{% url 'deletar-paciente' id=paciente.id %}">Excluir</a>
           </button>
         </div>
       </div>
+      <dialog class="cadastro-de-paciente" id="myModal3">
+        <button id="fecharModal3"><i class="ph ph-x"></i></button>
+        <div id="modal3">
+        </div>
+      </dialog>
     </li>
-    {% comment %} <li>
-      <label for="second">
-        <div class="informacoes-do-paciente">
-          <img src="{% static 'imagens/usuario.svg' %}" alt="Logo DietHub" /> Paciente 2
-        </div>
-
-        <i class="ph ph-caret-down"></i>
-      </label>
-      <input type="radio" name="collapse" id="second" />
-
-      <div class="content">
-        <div class="informacoes-gerais-do-paciente">
-          <div class="detalhes-collapse">
-            <span class="titulo-collapse">Nome</span>
-            <span class="dados-do-cliente">Paciente 1</span>
-          </div>
-
-          <div class="detalhes-collapse">
-            <span class="titulo-collapse">Email</span>
-            <span class="dados-do-cliente">paciente1@gmail.com</span>
-          </div>
-
-          <div class="detalhes-collapse">
-            <span class="titulo-collapse">CPF</span>
-            <span class="dados-do-cliente">123.456.789-00</span>
-          </div>
-
-          <div class="detalhes-collapse">
-            <span class="titulo-collapse">Whatsapp</span>
-            <a href="#" class="dados-do-cliente" id="botao-entrar-em-contato"><img src="{% static 'imagens/icone-whatsapp.svg' %}" alt="icone-whatsapp" /> Entrar em contato</a>
-          </div>
-        </div>
-
-        <hr class="solid" />
-
-        <div class="informacoes-gerais-do-paciente">
-          <div class="detalhes-collapse">
-            <span class="titulo-collapse">Dieta</span>
-            <span class="aguardando-acao">Aguardando resposta do formulário de pré-consulta</span>
-          </div>
-
-          <button class="botao-criar-dieta" id="abrirModal">
-            <i class="ph ph-plus"></i>
-            <span>Criar dieta</span>
-          </button>
-        </div>
-
-        <hr class="solid" />
-
-        <div class="informacoes-gerais-do-paciente">
-          <div class="detalhes-collapse">
-            <span class="titulo-collapse">Diário alimentar</span>
-            <span class="aguardando-acao">Aguardando resposta do formulário de pré-consulta</span>
-          </div>
-        </div>
-
-        <div class="footer-collapse-pacientes">
-          <button id="botao-editar">
-            <i class="ph ph-pencil-simple-line"></i>
-            Editar
-          </button>
-          <button id="botao-excluir">
-            <i class="ph ph-trash"></i>
-            Excluir
-          </button>
-        </div>
-      </div>
-    </li>
-
-    <li>
-      <label for="third">
-        <div class="informacoes-do-paciente">
-          <img src="{% static 'imagens/usuario.svg' %}" alt="Logo DietHub" /> Paciente 3
-        </div>
-        <i class="ph ph-caret-down"></i>
-      </label>
-      <input type="radio" name="collapse" id="third" />
-
-      <div class="content">
-        <div class="informacoes-gerais-do-paciente">
-          <div class="detalhes-collapse">
-            <span class="titulo-collapse">Nome</span>
-            <span class="dados-do-cliente">Paciente 1</span>
-          </div>
-
-          <div class="detalhes-collapse">
-            <span class="titulo-collapse">Email</span>
-            <span class="dados-do-cliente">paciente1@gmail.com</span>
-          </div>
-
-          <div class="detalhes-collapse">
-            <span class="titulo-collapse">CPF</span>
-            <span class="dados-do-cliente">123.456.789-00</span>
-          </div>
-
-          <div class="detalhes-collapse">
-            <span class="titulo-collapse">Whatsapp</span>
-            <a href="#" class="dados-do-cliente" id="botao-entrar-em-contato"><img src="{% static 'imagens/icone-whatsapp.svg' %}" alt="icone-whatsapp" /> Entrar em contato</a>
-          </div>
-        </div>
-
-        <hr class="solid" />
-
-        <div class="informacoes-gerais-do-paciente">
-          <div class="detalhes-collapse">
-            <span class="titulo-collapse">Dieta</span>
-            <span class="aguardando-acao">Aguardando resposta do formulário de pré-consulta</span>
-          </div>
-
-          <button class="botao-criar-dieta" id="abrirModal">
-            <i class="ph ph-plus"></i>
-            <span>Criar dieta</span>
-          </button>
-        </div>
-
-        <hr class="solid" />
-
-        <div class="informacoes-gerais-do-paciente">
-          <div class="detalhes-collapse">
-            <span class="titulo-collapse">Diário alimentar</span>
-            <span class="aguardando-acao">Aguardando resposta do formulário de pré-consulta</span>
-          </div>
-        </div>
-
-        <div class="footer-collapse-pacientes">
-          <button id="botao-editar">
-            <i class="ph ph-pencil-simple-line"></i>
-            Editar
-          </button>
-          <button id="botao-excluir">
-            <i class="ph ph-trash"></i>
-            Excluir
-          </button>
-        </div>
-      </div>
-    </li> {% endcomment %}
   </ul>
 {% include 'dieta/cadastrar-dieta.html' %} 
