--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -4,25 +4,25 @@
 
 {% block sidebar %}
   <nav class="side-bar">
-    <a href="/home" class="logo"><img src="{% static 'imagens/logo-diet-hub.svg' %} " alt="Logo DietHub" /></a>
+    <a href="{% url 'listar-pacientes'%}" class="logo"><img src="{% static 'imagens/logo-diet-hub.svg' %} " alt="Logo DietHub" /></a>
 
     <ul>
       <li class="opcao-do-menu opcao-do-menu-atual">
-        <a href="/home">
+        <a href="{% url 'listar-pacientes'%}">
           <i class="ph ph-house-line"></i>
           <span>Home</span>
         </a>
       </li>
 
       <li class="opcao-do-menu">
-        <a href="/meus-formularios">
+        <a href="{% url 'meus-formularios' %}">
           <i class="ph ph-notepad"></i>
           <span>Formulários</span>
         </a>
       </li>
 
       <li class="opcao-do-menu">
-        <a href="/alimentos">
+        <a href="{% url 'listar-alimentos' %}">
           <i class="ph ph-apple-logo"></i>
           <span>Alimentos</span>
         </a>
