--- a/alimento/templates/alimento/collapse-alimentos.html
+++ b/alimento/templates/alimento/collapse-alimentos.html
@@ -1,126 +1,43 @@
-{% extends 'core/base.html' %}
 {% load static %}
-{% block collapse_alimentos %}
   <ul id="collapse">
     <li>
-      <label for="first">
+      <label for={{alimento.id}}>
         <div class="informacoes-do-paciente">
-          <i class="ph ph-cookie"></i> Frango
+          <i class="ph ph-cookie"></i> {{alimento.nome}}
         </div>
         <i class="ph ph-caret-down"></i>
       </label>
-      <input type="radio" name="collapse" id="first" checked />
+      <input type="radio" name="collapse" id="{{alimento.id}}" {% if forloop.first %}checked{% endif %} />
 
       <div class="content">
         <div class="informacoes-gerais-do-paciente">
           <div class="detalhes-collapse">
             <span class="titulo-collapse">Porção (em g)</span>
-            <span class="dados-do-cliente">100g</span>
+            <span class="dados-do-cliente">{{alimento.porcao}}</span>
           </div>
 
           <div class="detalhes-collapse">
-            <span class="titulo-collapse">Valor energético</span>
-            <span class="dados-do-cliente">139 kcal</span>
-          </div>
-
-          <div class="detalhes-collapse">
-            <span class="titulo-collapse">Carboidratos</span>
-            <span class="dados-do-cliente">0,3g</span>
-          </div>
-
-          <div class="detalhes-collapse">
-            <span class="titulo-collapse">Tipo</span>
-            <span class="dados-do-cliente">Proteína</span>
-          </div>
-        </div>
-
-        <div class="footer-collapse-pacientes">
-          <button id="botao-editar">
-            <i class="ph ph-pencil-simple-line"></i>
-            Editar
-          </button>
-          <button id="botao-excluir">
-            <i class="ph ph-trash"></i>
-            Excluir
-          </button>
-        </div>
-      </div>
-    </li>
-
-    <li>
-      <label for="second">
-        <div class="informacoes-do-paciente">
-          <i class="ph ph-cookie"></i> Frango
-        </div>
-        <i class="ph ph-caret-down"></i>
-      </label>
-      <input type="radio" name="collapse" id="second" checked />
-
-      <div class="content">
-        <div class="informacoes-gerais-do-paciente">
-          <div class="detalhes-collapse">
-            <span class="titulo-collapse">Porção (em g)</span>
-            <span class="dados-do-cliente">100g</span>
-          </div>
-
-          <div class="detalhes-collapse">
-            <span class="titulo-collapse">Valor energético</span>
-            <span class="dados-do-cliente">139 kcal</span>
-          </div>
+            <span class="titulo-collapse">Calorias (em kcal)</span>
+            <span class="dados-do-cliente">{{alimento.calorias}}</span>
+          </div> 
 
           <div class="detalhes-collapse">
             <span class="titulo-collapse">Carboidratos</span>
-            <span class="dados-do-cliente">0,3g</span>
+            <span class="dados-do-cliente">{{alimento.carboidratos}}</span>
           </div>
 
+          
           <div class="detalhes-collapse">
-            <span class="titulo-collapse">Tipo</span>
-            <span class="dados-do-cliente">Proteína</span>
+            <span class="titulo-collapse">Fibra alimentar</span>
+            <span class="dados-do-cliente">{{alimento.fibra_alimentar}}</span>
           </div>
-        </div>
-
-        <div class="footer-collapse-pacientes">
-          <button id="botao-editar">
-            <i class="ph ph-pencil-simple-line"></i>
-            Editar
-          </button>
-          <button id="botao-excluir">
-            <i class="ph ph-trash"></i>
-            Excluir
-          </button>
-        </div>
-      </div>
-    </li>
-
-    <li>
-      <label for="third">
-        <div class="informacoes-do-paciente">
-          <i class="ph ph-cookie"></i> Frango
-        </div>
-        <i class="ph ph-caret-down"></i>
-      </label>
-      <input type="radio" name="collapse" id="third" checked />
-
-      <div class="content">
-        <div class="informacoes-gerais-do-paciente">
           <div class="detalhes-collapse">
-            <span class="titulo-collapse">Porção (em g)</span>
-            <span class="dados-do-cliente">100g</span>
+            <span class="titulo-collapse">Proteínas</span>
+            <span class="dados-do-cliente">{{alimento.proteinas}}</span>
           </div>
-
           <div class="detalhes-collapse">
-            <span class="titulo-collapse">Valor energético</span>
-            <span class="dados-do-cliente">139 kcal</span>
-          </div>
-
-          <div class="detalhes-collapse">
-            <span class="titulo-collapse">Carboidratos</span>
-            <span class="dados-do-cliente">0,3g</span>
-          </div>
-
-          <div class="detalhes-collapse">
-            <span class="titulo-collapse">Tipo</span>
-            <span class="dados-do-cliente">Proteína</span>
+            <span class="titulo-collapse">Gorduras</span>
+            <span class="dados-do-cliente">{{alimento.gorduras}}</span>
           </div>
         </div>
 
@@ -137,4 +54,3 @@
       </div>
     </li>
   </ul>
-{% endblock %}
