--- a/alimento/templates/alimento/collapse-alimentos.html
+++ b/alimento/templates/alimento/collapse-alimentos.html
@@ -48,7 +48,7 @@
           </button>
           <button id="botao-excluir">
             <i class="ph ph-trash"></i>
-            Excluir
+            <a href="{% url 'deletar-alimento' id=alimento.id %}">Excluir</a>
           </button>
         </div>
       </div>
