--- a/alimento/templates/alimento/collapse-alimentos.html
+++ b/alimento/templates/alimento/collapse-alimentos.html
@@ -44,13 +44,17 @@
         <div class="footer-collapse-pacientes">
           <button id="botao-editar">
             <i class="ph ph-pencil-simple-line"></i>
-            Editar
-          </button>
+            <a id="abrirModal2" hx-get={% url 'editar-alimento' id=alimento.id %} hx-trigger='click' hx-target='#modal2' hx-swap="innerHTML">Editar</a>
           <button id="botao-excluir">
             <i class="ph ph-trash"></i>
             <a href="{% url 'deletar-alimento' id=alimento.id %}">Excluir</a>
           </button>
         </div>
       </div>
+      <dialog class="cadastro-de-paciente" id="myModal2">
+        <button id="fecharModal2"><i class="ph ph-x"></i></button>
+        <div id="modal2">
+        </div>
+      </dialog>
     </li>
   </ul>
