:art: ajustar collapses

--- a/alimento/templates/alimento/collapse-alimentos.html
+++ b/alimento/templates/alimento/collapse-alimentos.html
@@ -1,7 +1,7 @@
 {% load static %}
   <ul id="collapse">
     <li>
-      <label for={{alimento.id}}>
+      <label class="collapse-header" for={{alimento.id}}>
         <div class="informacoes-do-paciente">
           <i class="ph ph-cookie"></i> {{alimento.nome}}
         </div>
