--- a/formulario/templates/formulario/collapse-formularios.html
+++ b/formulario/templates/formulario/collapse-formularios.html
@@ -3,7 +3,7 @@
 {% block collapse %}
   <ul id="collapse">
     <li>
-      <label for="first">
+      <label class="collapse-header" for="first">
         <div class="informacoes-do-paciente">Formulário 1</div>
         <i class="ph ph-caret-down"></i>
       </label>
