--- a/formulario/templates/formulario/novo-formulario.html
+++ b/formulario/templates/formulario/novo-formulario.html
@@ -72,7 +72,7 @@
               <label for="tipo-pergunta">Pergunta obrigatória</label>
             </div>
 
-            <button class="botao-excluir">
+            <button class="botao-excluir-formulario">
               <i class="ph ph-trash"></i>
               Excluir
             </button>
