--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -3,47 +3,9 @@
 {% load static %}
 
 {% block sidebar %}
-  <nav class="side-bar">
-    <a href="{% url 'listar-pacientes'%}" class="logo"><img src="{% static 'imagens/logo-diet-hub.svg' %} " alt="Logo DietHub" /></a>
-
-    <ul>
-      <li class="opcao-do-menu opcao-do-menu-atual">
-        <a href="{% url 'listar-pacientes'%}">
-          <i class="ph ph-house-line"></i>
-          <span>Home</span>
-        </a>
-      </li>
-
-      <li class="opcao-do-menu">
-        <a href="{% url 'meus-formularios' %}">
-          <i class="ph ph-notepad"></i>
-          <span>Formulários</span>
-        </a>
-      </li>
-
-      <li class="opcao-do-menu">
-        <a href="{% url 'listar-alimentos' %}">
-          <i class="ph ph-apple-logo"></i>
-          <span>Alimentos</span>
-        </a>
-      </li>
-
-      <li class="opcao-do-menu">
-        <a href="#">
-          <i class="ph ph-gear-six"></i>
-          <span>Configurações</span>
-        </a>
-      </li>
-
-      <li class="opcao-do-menu">
-        <a href="#">
-          <i class="ph ph-moon-stars"></i>
-          <span>Tema dark</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
+  {% include "core/sidebar.html" %}
 {% endblock %}
+
 
 {% block main %}
 <body>
