salvando e adicionando mais perguntas

--- a/alimento/templates/alimento/alimentos.html
+++ b/alimento/templates/alimento/alimentos.html
@@ -15,7 +15,7 @@
       </li>
 
       <li class="opcao-do-menu">
-        <a href="{% url 'meus-formularios' %}">
+        <a href="{% url 'listar-formularios' %}">
           <i class="ph ph-notepad"></i>
           <span>Formulários</span>
         </a>
@@ -58,7 +58,7 @@
         </div>
 
         <div class="breadcrumb">
-          <a href="/alimentos">
+          <a href="{% url 'listar-alimentos' %}">
             <i class="ph ph-apple-logo"></i>
             <span>Alimentos /</span>
           </a>
