--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -15,7 +15,7 @@
       </li>
 
       <li class="opcao-do-menu">
-        <a href="{% url 'meus-formularios' %}">
+        <a href="{% url 'listar-formularios' %}">
           <i class="ph ph-notepad"></i>
           <span>Formulários</span>
         </a>
