--- a/formulario/templates/formulario/meus-formularios.html
+++ b/formulario/templates/formulario/meus-formularios.html
@@ -4,25 +4,25 @@
 
 {% block sidebar %}
   <nav class="side-bar">
-    <a href="/home" class="logo"><img src="{% static 'imagens/logo-diet-hub.svg' %} " alt="Logo DietHub" /></a>
+    <a href="{% url 'listar-pacientes'%}" class="logo"><img src="{% static 'imagens/logo-diet-hub.svg' %} " alt="Logo DietHub" /></a>
 
     <ul>
       <li class="opcao-do-menu">
-        <a href="/home">
+        <a href="{% url 'listar-pacientes'%}">
           <i class="ph ph-house-line"></i>
           <span>Home</span>
         </a>
       </li>
 
       <li class="opcao-do-menu opcao-do-menu-atual">
-        <a href="/meus-formularios">
+        <a href="{% url 'listar-formularios' %}">
           <i class="ph ph-notepad"></i>
           <span>Formulários</span>
         </a>
       </li>
 
       <li class="opcao-do-menu">
-        <a href="/alimentos">
+        <a href="{% url 'listar-alimentos' %}">
           <i class="ph ph-apple-logo"></i>
           <span>Alimentos</span>
         </a>
@@ -50,14 +50,14 @@
     <header>
       <nav class="breadcrumbs">
         <div class="breadcrumb">
-          <a href="/home">
+          <a href="{% url 'listar-pacientes'%}">
             <i class="ph ph-house-line"></i>
             <span>Home /</span>
           </a>
         </div>
 
         <div class="breadcrumb">
-          <a href="/meus-formularios">
+          <a href="{% url 'listar-formularios' %}">
             <i class="ph ph-notepad"></i>
             <span>Meus formulários /</span>
           </a>
@@ -76,7 +76,7 @@
       <div class="cabecalho-conteudo-principal">
         <h1>Formulários</h1>
 
-        <button class="botao-padrao"><a href="/novo-formulario">Novo formulário</a></button>
+        <button class="botao-padrao"><a href="{% url 'cadastrar-formulario' %}">Novo formulário</a></button>
       </div>
 
       {% block collapse %}
