--- a/formulario/templates/formulario/meus-formularios.html
+++ b/formulario/templates/formulario/meus-formularios.html
@@ -3,46 +3,7 @@
 {% load static %}
 
 {% block sidebar %}
-  <nav class="side-bar">
-    <a href="/home" class="logo"><img src="{% static 'imagens/logo-diet-hub.svg' %} " alt="Logo DietHub" /></a>
-
-    <ul>
-      <li class="opcao-do-menu">
-        <a href="/home">
-          <i class="ph ph-house-line"></i>
-          <span>Home</span>
-        </a>
-      </li>
-
-      <li class="opcao-do-menu opcao-do-menu-atual">
-        <a href="/meus-formularios">
-          <i class="ph ph-notepad"></i>
-          <span>Formulários</span>
-        </a>
-      </li>
-
-      <li class="opcao-do-menu">
-        <a href="/alimentos">
-          <i class="ph ph-apple-logo"></i>
-          <span>Alimentos</span>
-        </a>
-      </li>
-
-      <li class="opcao-do-menu">
-        <a href="#">
-          <i class="ph ph-gear-six"></i>
-          <span>Configurações</span>
-        </a>
-      </li>
-
-      <li class="opcao-do-menu">
-        <a href="#">
-          <i class="ph ph-moon-stars"></i>
-          <span>Tema dark</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
+  {% include "core/sidebar.html" with opcao_menu_atual='meus-formularios' %}
 {% endblock %}
 
 {% block main %}
